--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "vite",
     "build": "vite build",
     "format": "npx prettier --write .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -20,6 +22,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.7",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.14",
     "prettier": "2.8.7",
     "tailwindcss": "^3.1.6",
